# tribute-payments-hook

./: .dockerignore  .gitignore  Dockerfile  LICENSE  codestyle.sh  pyproject.toml  readme.md
.github/workflows/: build-publish.yml  dockerhub-description.yml
app/: __main__.py  settings.py  utils.py
app/actions/: login.py  worker.py
tests/: test_parse_message.py
