[tool.poetry]
name = "tribute-payments-hook"
version = "0.1.0"
description = "Microservice that receives, parses and forwards messages from @tribute telegram bot"
authors = ["Renat Iliev <me@izeberg.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
telethon = "^1.36.0"
aiohttp = {extras = ["speedups"], version = "^3.10.5"}
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
ruff = "^0.6.7"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
explicit_package_bases = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
